--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "cmd"
   bin = "./internal/scripts/app"
   cmd = "go build -o ./internal/scripts ./cmd/app"
   delay = 1000
-  exclude_dir = []
+  exclude_dir = ["docs"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
@@ -21,7 +21,7 @@ tmp_dir = "cmd"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = []
+  pre_cmd = ["make .swag"]
   rerun = false
   rerun_delay = 500
   send_interrupt = false
