--- a/.air.toml
+++ b/.air.toml
@@ -21,7 +21,7 @@ tmp_dir = "cmd"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = ["make .swag"]
+  pre_cmd = []
   rerun = false
   rerun_delay = 500
   send_interrupt = false
