--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "cmd"
 [build]
   args_bin = []
   bin = "./internal/scripts/app"
-  cmd = "go build -o ./internal/scripts ./cmd/app"
+  cmd = "go build -o ./internal/scripts ./cmd/backend"
   delay = 1000
   exclude_dir = ["docs"]
   exclude_file = []
@@ -13,7 +13,7 @@ tmp_dir = "cmd"
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["internal", "cmd/app", "pkg"]
+  include_dir = ["internal", "cmd/backend", "pkg"]
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
   kill_delay = "0s"
